added export of y_train and y_val for evaluation metrics of models

--- a/notebooks/02_vectorize_lsa.ipynb
+++ b/notebooks/02_vectorize_lsa.ipynb
@@ -662,6 +662,19 @@
     "joblib.dump(count_X_val_reduced, \"../data/processed/count_X_val_reduced.pkl\")\n",
     "joblib.dump(count_test_reduced, \"../data/processed/count_test_reduced.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d984a7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exporting y_train and y_val to use in evaluation of models (like adjusted random score and silhouette scores)\n",
+    "\n",
+    "y_train.to_csv(\"../data/processed/y_train.csv\",index=False)\n",
+    "y_val.to_csv(\"../data/processed/y_val.csv\",index=False)"
+   ]
   }
  ],
  "metadata": {
