added export of tfidf_x_Train and tfidf_X_val prior to SVD for use in NMF modeling

--- a/notebooks/02_vectorize_lsa.ipynb
+++ b/notebooks/02_vectorize_lsa.ipynb
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "f4968b60",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "['../models/tfidf_vectorizer.joblib']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,6 +506,10 @@
     "#fit and transform training and validation sets\n",
     "tfidf_X_train = tfidf_vectorizer.fit_transform(X_train)\n",
     "tfidf_X_val = tfidf_vectorizer.transform(X_val)\n",
+    "\n",
+    "#Export for use in NMF modeling\n",
+    "joblib.dump(tfidf_X_train, \"../data/processed/tfdif_X_train.joblib\")\n",
+    "joblib.dump(tfidf_X_val, \"../data/processed/tfdif_X_val.joblib\")\n",
     "\n",
     "\n",
     "#transform test set //test set must use the same vocabulary and IDF weights learned from the training set.\n",
@@ -665,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "4d984a7a",
    "metadata": {},
    "outputs": [],
